changed db to mongoDB

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,4 @@
-APP_ENV=dev
-PORT=3000
-HOST=localhost
-DB_PORT=5432
-USER_NAME=postgres
-DB_NAME=recruitment
-PASSWORD=postgres
+DSN=mongodb://localhost:27017/recruitment
 SECRET=secret
+API_KEY=<API_KEY_HERE>
+PARSER_URL=<PARSER_URL_HERE>
